# agent

./: Cargo.toml  README.md
haiku/: haiku-12345678-1234-1234-1234-123456789012.txt  haiku-12345678-90ab-cdef-ghij-klmnopqrst.txt  haiku-1234567890.txt  haiku-123e4567-c8d9-1234-5678-1234567890ab.txt  haiku-123e4567-e89b-12d3-a456-426614174000.txt  haiku-2023-10-05-12-34-56.txt  haiku-25e4d1f3-3d7c-4a8b-9e8d-1c9f7d6e4d1f.txt  haiku-28d6e5b1-4d8f-4a3c-8e7d-1f3a9b5c7d8e.txt  haiku-29197816-4d0a-4a8d-9e4e-6f6e3d6c1a7f.txt  haiku-2f5e8d7c-4a3b-11ed-8a2d-000000000000.txt  haiku-36e3d2f4-4a7e-4d8c-8d6e-1f5e9d6c7b8a.txt  haiku-36e8f9d4-4a4a-4d9d-9f5a-1e8c6d7f8e8f.txt  haiku-36e9d8f4-4c0b-4a6e-9d7f-2a1b8c3d4e5f.txt  haiku-36f8b4a1-4d6e-4a2c-9b7d-1e2f3a4b5c6d.txt  haiku-3b4d6e1f-2a8c-4f9e-8d7c-1a2b3c4d5e6f.txt  haiku-3e5f8a44-4d7e-4a8b-9c6d-1f2e3a4b5c6d.txt  haiku-3e9f2d14-4a8b-4b9c-8f3e-1d6a7c8d9e0a.txt  haiku-3f55b6c8-4d8e-4a7c-8c9d-1e2f3a4b5c6d.txt  haiku-3f5b4a1e-7d2c-4d8e-9f6a-1b2c3d4e5f6a.txt  haiku-3f5e4a1b-4d6c-7e8f-9a0b-2c1d3e5f7a9b.txt  haiku-3f5e9d1a-4a2b-4c8d-9e6f-7d1a2b3c4d5e.txt  haiku-4e7d5c7f-3a8b-4f9e-8d6c-1a2b3c4d5e6f.txt  haiku-54d1b5e2-3a9f-4c8e-8d6a-7f2e1a3d4b5c.txt  haiku-54d3b2c1-1a2b-4c3d-8e7f-6a5b4c3d2e1f.txt  haiku-54d3c7f5-4c8d-4a9e-9e8d-3e1d6f7e8d6a.txt  haiku-58e9d7f3-4a3c-4b8d-9f1e-2c6d5a4b3e2f.txt  haiku-5a5b5c5d-5e5f-5a5b-5c5d-5e5f5a5b5c5d.txt  haiku-5a5f3a5f-4b4c-4d4e-8f8e-2a2b2c2d2e2f.txt  haiku-5f3b4a1c-9d2e-4a7b-8c6d-1e2f3a4b5c6d.txt  haiku-5f5e1d3a-9b7c-4a2e-8f6d-1c8b4a3e2d1a.txt  haiku-65c1f3d2-4a7e-4d6f-8b1a-2e9d3c7f8e3a.txt  (+33 more)
src/: lib.rs  (+1 more)
(+4 files in other folders)
