[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
tracing = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
assert_matches = "1.5"
tempfile = "3.10"
wiremock = "0.5"

[features]
test-utils = []
