[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ollama-rs = "0.1"
rmcp = { version = "0.1", features = ["server", "client", "transport-child-process"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
